--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,9 +75,11 @@
         <mat-sidenav-content class="sidenav-content">
 
             <!-- Main content -->
-            <app-about></app-about>
+
+            <router-outlet></router-outlet>
+            <!-- <app-about></app-about> -->
             <!-- <app-not-found></app-not-found> -->
-            <app-new-releases></app-new-releases>
+            <!-- <app-new-releases></app-new-releases> -->
 
             <!-- ------------ -->
 
