About and Not Found pages now have relevant data

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<h1>About</h1>
+<p>All about me - the developer.</p>
+<p>
+    My name is Dominik Thibaudeau and I am currently studying Computer Programming at Seneca College in Toronto, Ontario.
+    <br /> <br /> At Seneca I have learned a few programming/scripting languages such as C, C++, Java and Javascript.
+</p>
