--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -46,18 +46,18 @@
                 </div>
 
 
-                <a mat-list-item>
+                <a mat-list-item [routerLink]="['/newReleases']">
                     <mat-icon mat-list-icon>
                         library_music
                     </mat-icon>
                     <p mat-line> New Releases </p>
                 </a>
 
-                <a mat-list-item>
+                <a mat-list-item [routerLink]="['/about']">
                     <mat-icon mat-list-icon>
                         favorite
                     </mat-icon>
-                    <p mat-line> Favourites </p>
+                    <p mat-line> About </p>
                 </a>
 
                 <mat-divider></mat-divider>
