--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -1,28 +1,25 @@
 <h1>{{artist.name}}</h1>
-<mat-card [style.background]="'url(' + 'https://i.scdn.co/image/a402db0dbd2b33ca7141ea0fd31e4b81e178c39a' + ') no-repeat center center'" [style.background-size]="'cover'" [style.height]="'450px'">
-</mat-card>
+<h3>Full discography for {{artist.name}}</h3>
+<h3>click the <b>album cover</b> for more information.</h3>
+
+<mat-card [style.background]="'url(' + artist.images[1].url + ') no-repeat center center'" [style.background-size]="'cover'" [style.height]="'450px'"></mat-card>
+
 <br /><br />
 <h1>Full Discography</h1>
 
 <div fxLayout="row wrap" fxLayout.xs="column">
+    <div fxFlex [style.margin]="'20px'" *ngFor="let album of albums">
+        <mat-card [style.min-width]="'200px'">
+            <mat-card-header>
+                <mat-card-title>{{album.name}}</mat-card-title>
+                <mat-card-subtitle>
+                    {{this.artist.name}}
+                </mat-card-subtitle>
+            </mat-card-header>
 
-    <!-- Single "Responsive" Card-->
-    <div *ngFor="let album of albums">
-        <div fxFlex [style.margin]="'20px'">
-            <mat-card [style.min-width]="'200px'">
-                <mat-card-header>
-                    <mat-card-title>{{album.name}}</mat-card-title>
-                    <mat-card-subtitle>
-                        {{this.artist.name}}
-                    </mat-card-subtitle>
-                </mat-card-header>
-
-                <img mat-card-image class="album-cover" src="https://i.scdn.co/image/ab67616d0000b273b02a3380a69bd2418a1f68f1" alt="album art">
-                <strong>Release Date: </strong>2021/02/12<br />
-                <strong>Tracks: </strong>22
-            </mat-card>
-        </div>
+            <img mat-card-image class="album-cover" src={{album.images[1].url}} alt="album art">
+            <strong>Release Date: </strong>{{album.release_date}}<br />
+            <strong>Tracks: </strong>{{album.total_tracks}}
+        </mat-card>
     </div>
-    <!-- -->
-
 </div>
