--- a/src/app/artist-discography/artist-discography.component.html
+++ b/src/app/artist-discography/artist-discography.component.html
@@ -9,17 +9,20 @@
 
 <div fxLayout="row wrap" fxLayout.xs="column">
     <div fxFlex [style.margin]="'20px'" *ngFor="let album of albums">
-        <mat-card [style.min-width]="'200px'">
-            <mat-card-header>
-                <mat-card-title>{{album.name}}</mat-card-title>
-                <mat-card-subtitle>
-                    {{this.artist.name}}
-                </mat-card-subtitle>
-            </mat-card-header>
+        <a [routerLink]="['/album', album.id]">
+            <mat-card [style.min-width]="'200px'">
 
-            <img mat-card-image class="album-cover" src={{album.images[1].url}} alt="album art">
-            <strong>Release Date: </strong>{{album.release_date}}<br />
-            <strong>Tracks: </strong>{{album.total_tracks}}
-        </mat-card>
+                <mat-card-header>
+                    <mat-card-title>{{album.name}}</mat-card-title>
+                    <mat-card-subtitle>
+                        {{this.artist.name}}
+                    </mat-card-subtitle>
+                </mat-card-header>
+
+                <img mat-card-image class="album-cover" src={{album.images[1].url}} alt="album art">
+                <strong>Release Date: </strong>{{album.release_date}}<br />
+                <strong>Tracks: </strong>{{album.total_tracks}}
+            </mat-card>
+        </a>
     </div>
 </div>
