--- a/src/app/album/album.component.html
+++ b/src/app/album/album.component.html
@@ -1,4 +1,8 @@
 <mat-card>
+    <h1>{{album.name}}</h1>
+    <p>Full track listing for {{album.name}}</p>
+    <p>Click the
+        <mat-icon mat-list-icon>queue_music</mat-icon> to add a song to your favourites list</p>
     <mat-card-content fxLayout="row wrap" fxLayout.xs="column">
         <div fxflex><img src={{album.images[0].url}} alt="album cover" [style.margin]="'10px'" [style.max-width]="'90%'" /></div>
         <div fxFlex>
@@ -10,7 +14,7 @@
 
                 <mat-chip-list aria-label="Artist selection">
                     <div *ngFor="let artist of album.artists">
-                        <mat-chip [routerLink]="['/artist']">{{artist.name}}</mat-chip>
+                        <mat-chip [routerLink]="['/artist', artist.id]">{{artist.name}}</mat-chip>
                     </div>
                 </mat-chip-list>
                 <br />
@@ -28,11 +32,12 @@
 <mat-list>
     <div *ngFor="let song of album.tracks.items">
         <mat-list-item>
-            <mat-icon mat-list-icon>queue_music</mat-icon>
+            <mat-icon mat-list-icon (click)="addToFavourites(song.id)">queue_music</mat-icon>
             <div mat-line>
                 <mat-card>
                     <mat-card-content>{{song.name}} - {{ (song.duration_ms / 60000).toFixed(2) }}
                     </mat-card-content>
+                    <div *ngIf="song.preview_url"><br /><audio controls [src]="song.preview_url"></audio></div>
                 </mat-card>
             </div>
         </mat-list-item>
