--- a/src/app/new-releases/new-releases.component.html
+++ b/src/app/new-releases/new-releases.component.html
@@ -1,36 +1,30 @@
-<p>new-releases works!</p>
 <div class="content">
+    <h1>New Releases</h1>
+    <p>The following is a list of new releases.</p>
+    <h4>Click the <b>album cover</b> or <b>artist name</b> for more information.</h4>
     <div fxLayout="row wrap" fxLayout.xs="column">
 
         <!-- Single "Responsive" Card-->
-        <div *ngFor="let user of releases">
-            <div fxFlex [style.margin]="'20px'">
-                <mat-card [style.min-width]="'200px'">
-                    <mat-card-header>
-                        <mat-card-title>{{user.name}}</mat-card-title>
-                        <mat-card-subtitle>New Release</mat-card-subtitle>
-                    </mat-card-header>
-                    <img mat-card-image class="album-cover" routerLink="['/album', releases.id]" src={{user.images[0].url}} alt="album art">
-                    <strong>Release Date: </strong>{{user.release_date}}<br />
-                    <strong>Tracks: </strong>{{user.total_tracks}}<br /><br />
-                    <mat-card-content>
-                        <mat-chip-list aria-label="Artist selection">
-                            <div *ngFor="let artist of user.artists">
-                                <a routerLink="['/artist', artist.id]">
-                                    <mat-chip>{{artist.name}}</mat-chip>
-                                </a>
-
-                            </div>
-                        </mat-chip-list>
-                    </mat-card-content>
-                </mat-card>
-            </div>
-
+        <div fxFlex [style.margin]="'20px'" *ngFor="let user of releases">
+            <mat-card [style.min-width]="'200px'">
+                <mat-card-header>
+                    <mat-card-title>{{user.name}}</mat-card-title>
+                    <mat-card-subtitle>New Release</mat-card-subtitle>
+                </mat-card-header>
+                <img mat-card-image class="album-cover" [routerLink]="['/album', user.id]" src={{user.images[0].url}} alt="album art">
+                <strong>Release Date: </strong>{{user.release_date}}<br />
+                <strong>Tracks: </strong>{{user.total_tracks}}<br /><br />
+                <mat-card-content>
+                    <mat-chip-list aria-label="Artist selection">
+                        <div *ngFor="let artist of user.artists">
+                            <a [routerLink]="['/artist', artist.id]">
+                                <mat-chip>{{artist.name}}</mat-chip>
+                            </a>
+                        </div>
+                    </mat-chip-list>
+                </mat-card-content>
+            </mat-card>
         </div>
-
-
-
-
 
     </div>
 </div>
