--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,11 +53,11 @@
                     <p mat-line> New Releases </p>
                 </a>
 
-                <a mat-list-item [routerLink]="['/about']">
+                <a mat-list-item [routerLink]="['/favourites']">
                     <mat-icon mat-list-icon>
                         favorite
                     </mat-icon>
-                    <p mat-line> About </p>
+                    <p mat-line> Favourites </p>
                 </a>
 
                 <mat-divider></mat-divider>
