--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,4 +3,6 @@
 <p>
     My name is Dominik Thibaudeau and I am currently studying Computer Programming at Seneca College in Toronto, Ontario.
     <br /> <br /> At Seneca I have learned a few programming/scripting languages such as C, C++, Java and Javascript.
+    <br> In terms of Web Development, I am familiar with Express, NodeJS, React and Angular.
+    <br>Independently, I am also comfortable with LUA
 </p>
